# payjoin-flutter

./: .gitignore  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  makefile  pubspec.yaml
.github/workflows/: precompile_binaries.yml
.github/workflows /: precompile_binaries.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
contrib/: clean-and-gen-bindings.sh
example/: .gitignore  README.md  cargokit_options.yaml  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/bdk/f/bdk_flutter_app/: MainActivity.kt
example/android/app/src/main/kotlin/io/f/payjoin/payjoin_example/: MainActivity.kt
example/integration_test/: bdk_full_cycle_test.dart  bitcoin_core_full_cycle_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: bdk_client.dart  bdk_library.dart  btc_client.dart  main.dart  payjoin_library.dart
example/lib/managers/: payjoin_manager.dart
example/lib/screens/: home.dart
example/lib/styles/: theme.dart
example/lib/widgets/: widgets.dart
ios/: payjoin.podspec  payjoin_flutter.podspec
ios/Classes/: frb_generated.h
lib/: bitcoin_ffi.dart  common.dart  payjoin.dart  receive.dart  send.dart  uri.dart
lib/receive/: v1.dart  v2.dart
lib/src/: config.dart  exceptions.dart  root.dart
rust/: Cargo.toml  build.rs  cargokit.yaml  cargokit_options.yaml  rust-toolchain.toml  rustfmt.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: bitcoin_ffi.rs  io.rs  mod.rs  receive.rs  send.rs  uri.rs
rust/src/api/receive/: error.rs  mod.rs
rust/src/api/send/: error.rs  mod.rs
rust/src/api/uri/: error.rs  mod.rs
rust/src/utils/: error.rs  types.rs
