[package]
name = "payjoin_flutter"
version = "0.18.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dev-dependencies]
bdk = { version = "0.29.0", features = ["all-keys", "use-esplora-ureq", "keys-bip39"] }
bitcoincore-rpc = "0.19.0"
anyhow = "1.0.68"
[dependencies]
ohttp = { version = "0.5.1" }
payjoin_ffi = {git = "https://github.com/LtbLightning/payjoin-ffi", branch="v0.18.0"}
flutter_rust_bridge = "=2.0.0"
anyhow = "1.0.68"
tokio = "1.36.0"
base64 = "0.22.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
