[package]
name = "payjoin_flutter"
version = "0.21.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dev-dependencies]
bdk = { version = "0.29.0", features = [
    "all-keys",
    "use-esplora-ureq",
    "keys-bip39",
] }
bitcoincore-rpc = "0.19.0"
anyhow = "1.0.68"
[dependencies]
bitcoin-ffi = { git = "https://github.com/bitcoindevkit/bitcoin-ffi.git", rev = "4cd8e644dbf4e001d71d5fffb232480fa5ff2246" }
payjoin_ffi = { git = "https://github.com/LtbLightning/payjoin-ffi", tag = "v0.22.0" }
flutter_rust_bridge = "=2.0.0"
anyhow = "1.0.68"
tokio = "1.36.0"
base64 = "0.22.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
_danger-local-https = ["payjoin_ffi/_danger-local-https"]
