[package]
name = "payjoin-flutter"
version = "0.21.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dev-dependencies]
bdk = { version = "0.29.0", features = [
    "all-keys",
    "use-esplora-ureq",
    "keys-bip39",
] }
bitcoincore-rpc = "0.19.0"
anyhow = "1.0.68"
[dependencies]
lazy_static = "1.4.0"
bitcoin-ffi = { git = "https://github.com/bitcoindevkit/bitcoin-ffi.git", rev = "6b1d131" }
payjoin = { version = "0.23.0", features = ["io"] }
payjoin-ffi = { git = "https://github.com/LtbLightning/payjoin-ffi", tag = "v0.23.0" }
flutter_rust_bridge = "=2.0.0"
anyhow = "1.0.68"
tokio = "1.36.0"
base64 = "0.22.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
_danger-local-https = ["payjoin-ffi/_danger-local-https"]
